# MemScope

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  USB_Firmware.map  compile_fw_STM32F4.bash  compile_fw_STM32F4.sh  config Debug.launch  config.ioc  config.launch  mx.scratch  run_docker.bash  settings.cmake  stm_measurement_firmware.ioc  toolchain.cmake
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f429xx.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_spi.h  stm32f4xx_hal_uart.h  stm32f4xx_ll_usb.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_pcd.c  stm32f4xx_hal_spi.c  stm32f4xx_hal_uart.c  stm32f4xx_ll_usb.c
FlashTool/: flash_STM32Board.sh
FlashTool/Qt/STM32FlashTool/: Button.qml  CMakeLists.txt  HeaderForm.ui.qml  LoggingOutput.qml  STM32FlashTool_en_150.ts  SelectChipDropDown.qml  compilationworker.cpp  compilationworker.h  compile_fw_STM32F4.sh  main.cpp  main.qml  memoryconfig.cpp  memoryconfig.h  qml.qrc
FlashTool/Qt/STM32FlashTool/components/: Button.qml  CompilationState.qml  Header.qml  LoggingOutput.qml  Menu.qml  MenuItem.qml  NavigationBar.qml  SelectChipDropDown.qml  SelectChipDropDown.ui.qml  StartPage.qml  TestWindow.ui.qml
FlashTool/Qt/STM32FlashTool/components/forms/: ButtonForm.ui.qml  CompilationStateForm.ui.qml  HeaderForm.ui.qml  LoggingOutputForm.ui.qml  MenuForm.ui.qml  MenuItemForm.ui.qml  NavigationBarForm.ui.qml  SelectChipDropDownForm.ui.qml  StartPageForm.ui.qml
FlashTool/Qt/STM32FlashTool/cpp/: memoryconfig.cpp  memoryconfig.h
FlashTool/Qt/STM32FlashTool/cpp/Include/: CompilationHandler.h  ConsoleOutputParser.h  EasyLoggingWrapper.h  MemoryConfig.h
FlashTool/Qt/STM32FlashTool/cpp/Src/: CompilationHandler.cpp  ConsoleOutputParser.cpp  EasyLoggingWrapper.cpp  MemoryConfig.cpp
Inc/: CommandDefines.h  Logger.h  cmd_parser.h  error_handler.h  general_defines.h  io_pin_defines.h  main.h  memory_control.h  memory_defines.h  memory_error_handling.h  meta_data_handler.h  metrics.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  test_cases.h  time_measurement.h  tud_seceng.h  usbd_cdc_if.h
Inc/SystemFiles/: basic_defines.h  fmc.h  gpio.h  spi.h  stm32f4xx_it.h  usart.h  usbd_cdc_if.h  usbd_conf.h
Inc/cpp/: ClockConfig.h  CommandDefines.h  CommandLineParser.h  InterfaceWrappers.h  JSONParser.h  Main.h  MemoryController.h  MemoryErrorHandling.h  MemoryTest.h  SPIWrapper.h  STMHelperFunctions.h  TimeMeasurement.h  UARTWrapper.h  USBWrapper.h
Inc/cpp/Devices/: DeviceDefines.h  DeviceWrapper.h  STM32F429Wrapper.h
Inc/cpp/Experiments/: MemoryExperiment.h  ReadLatency.h  Reliability.h  RowHammering.h  VolatageVariations.h  VoltageVariations.h  WriteLatency.h
Inc/cpp/InterfaceWrappers/: InterfaceWrapper.h  InterfaceWrappers.h  SPIProperties.h  SPIWrapper.h  UARTProperties.h  UARTWrapper.h  USBWrapper.h
Inc/cpp/Main/: Main.h  Main.hpp
Inc/cpp/MemoryControllerWrappers/: MemoryControllerParallel.h  MemoryControllerSPI.h
Inc/cpp/MemoryControllers/: MemoryController.h  MemoryControllerParallel.h  MemoryControllerParallelProperties.h  MemoryControllerSPI.h
Inc/cpp/MemoryModules/: FRAM_Cypress_FM22L16_55_TG.h  FRAM_Fujitsu_MB85R1001ANC_GE1.h  FRAM_Rohm_MR48V256CTAZAARL.h  MRAM_Everspin_MR4A08BUYS45.h  MemoryModule.h  MemoryProperties.h  ReRAM_ADESTO_RM25C512C_LTAI_T.h  ReRAM_Fujitsu_MB85AS4MTPF_G_BCERE1.h  SRAM_Alliance_AS7C34098A.h  SRAM_Alliance_AS7C38098A.h  SRAM_Cypress_CY7C1041CV33.h  SRAM_Cypress_CY7C1051CDV33.h  SRAM_ISSI_IS61WV51216BLL.h
Inc/cpp/uart_frame_protocol/: Frame.h  JsonParser.h
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_core.h  usbd_def.h
OpenOCDConfig/: stm32f429disc1.cfg
Src/: cmd_parser.c  error_handler.c  fmc.c  gpio.c  main.c  memory_control.c  memory_error_handling.c  meta_data_handler.c  metrics.c  retarget.c  spi.c  stm32f4xx_it.c  syscalls.c  test_cases.c  time_measurement.c  tud_seceng.c  usart.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c
Src/SystemFiles/: fmc.c  gpio.c  retarget.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
Src/cpp/: ClockConfig.cpp  CommandLineParser.cpp  InterfaceWrappers.cpp  JSONParser.cpp  Logger.cpp  Main.cpp  MemoryController.cpp  MemoryErrorHandling.cpp  MemoryTest.cpp  SPIWrapper.cpp  STMHelperFunctions.cpp  TimeMeasurement.cpp  UARTWrapper.cpp  USBWrapper.cpp
Src/cpp/Devices/: DeviceWrapper.cpp  STM32F429Wrapper.cpp
Src/cpp/Experiments/: MemoryExperiment.cpp  ReadLatency.cpp  Reliability.cpp  RowHammering.cpp  VolatageVariations.cpp  VoltageVariations.cpp  WriteLatency.cpp
Src/cpp/InterfaceWrappers/: SPIWrapper.cpp  UARTWrapper.cpp  USBWrapper.cpp
Src/cpp/Main/: Main.cpp
Src/cpp/MemoryController/: MemoryController.cpp  MemoryControllerParallel.cpp  MemoryControllerSPI.cpp
Src/cpp/MemoryControllerWrappers/: MemoryControllerParallel.cpp  MemoryControllerSPI.cpp
Src/cpp/MemoryModules/: FRAM_Cypress_FM22L16_55_TG.cpp  FRAM_Fujitsu_MB85R1001ANC_GE1.cpp  FRAM_Rohm_MR48V256CTAZAARL.cpp  MRAM_Everspin_MR4A08BUYS45.cpp  MemoryModule.cpp  ReRAM_ADESTO_RM25C512C_LTAI_T.cpp  ReRAM_Fujitsu_MB85AS4MTPF_G_BCERE1.cpp  SRAM_Alliance_AS7C34098A.cpp  SRAM_Alliance_AS7C38098A.cpp  SRAM_Cypress_CY7C1041CV33.cpp  SRAM_Cypress_CY7C1051CDV33.cpp  SRAM_ISSI_IS61WV51216BLL.cpp
Src/cpp/uart_frame_protocol/: Frame.cpp  JsonParser.cpp
Tests/: CMakeLists.txt  SPIMemoryControllerTest.cpp  TestInterfaceWrapper.cpp  TestInterfaceWrapper.h  compile_unit_test.sh
Tests/Src/: SPIMemoryControllerTest.cpp
cmake/: build_documentation.cmake  device_specific_defines.cmake  file_list.cmake
cmake/toolchains/: toolchain_default_gcc.cmake  toolchain_stm32f429.cmake
cmake/unit_testing/: CMakeLists.txt
python_tester/: serial_tester.py
